[package]
name = "c3mq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ark-bls12-381 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-poly = { version = "0.4", features = ["parallel"]}
ark-serialize = "0.4"
ark-std = "0.4"
bincode = "1.0"
crypto-hash = "0.3.4"
fancy-garbling = { git = "https://github.com/GaloisInc/swanky.git" }
howlong = "0.1"
itertools = "0.13.0"
lazy_static = "1.4"
oblivious_transfer_protocols = { git = "https://github.com/docknetwork/crypto.git" }
ocelot = { git = "https://github.com/GaloisInc/swanky.git" }
once_cell = "1.10.0"
rand = "0.8.5"
rayon = "1.10"
regex = { version = "1", features = ["unicode-case"] }
scuttlebutt = { git = "https://github.com/GaloisInc/swanky.git" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
subtle = { version = "2.6.1", features = [
  "core_hint_black_box",
  "const-generics",
] }
tracing = "0.1"
tracing-subscriber = "0.2"
vectoreyes = { git = "https://github.com/GaloisInc/swanky.git" }






[profile.release]
opt-level = 3
debug = false
